git-svn-id: svn://svn.code.sf.net/p/justniffer/code/trunk@86 1140968e-e2c7-4c3d-a3be-3139d5afca7e

--- a/justniffer.8
+++ b/justniffer.8
@@ -27,9 +27,9 @@
 
 .fi
 .SH DESCRIPTION
- \fBjustniffer\fP captures reassembles and reorders TCP packets, performs IP packet defragmentation and displays the tcp flow in the standard output.
- It is usefull for logging network traffic in a 'standard' (web server like) or in a customized way.
- It can log timings (e.g. response time), usefull for tracking network services performances (e.g. web server, application server, etc.).
+ \fBjustniffer\fP captures reassembles and reorders TCP packets, performs IP packet defragmentation and displays the tcp flow or part of it.
+ It is useful for logging network traffic in a 'standard' (web server like) or in a customized way.
+ It can log timings (e.g. response time), useful for tracking network services performances (e.g. web server, application server, etc.).
  Output format can be customized using the log format option \fB-l\fP (see \fBFORMAT KEYWORDS\fP). 
  Most of them can be used for retrieving HTTP protocol informations. See \fBEXAMPLES\fP
 
