--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+justniffer (0.5) unstable; urgency=low
+  * added new extension scripts for saving http captured contents
+
+ -- Oreste Notelli <oreste.notelli@plecno.com>  Thu, 27 May 2009 22:00:00 +0100
+
 justniffer (0.4.1) unstable; urgency=low
   * debianization
 
