git-svn-id: svn://svn.code.sf.net/p/justniffer/code/trunk@99 1140968e-e2c7-4c3d-a3be-3139d5afca7e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-05-31  Oreste Notelli
+
+      * added connection.timestamp
+      * fixed idle.time.0 formatting
+      * fixed documentation
+
 2009-05-27  Oreste Notelli
 
       * added new extension scripts for saving http captured contents
