git-svn-id: svn://svn.code.sf.net/p/justniffer/code/trunk@100 1140968e-e2c7-4c3d-a3be-3139d5afca7e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+justniffer (0.5.1) unstable; urgency=low
+  * added connection.timestamp
+  * fixed idle.time.0 formatting
+  * fixed documentation
+
+ -- Oreste Notelli <oreste.notelli@plecno.com>  Sun, 31 May 2009 19:48:00 +0100
+
 justniffer (0.5) unstable; urgency=low
   * added new extension scripts for saving http captured contents
 
