--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ justniffer (0.5.1) unstable; urgency=low
   * added connection.timestamp
   * fixed idle.time.0 formatting
   * fixed documentation
+  * fixed compilation issues with gcc 3.3.3
+  * more adherence to RFC 2616: looking for headers in case insesitive mode
+  * new HTTP headers addes
 
  -- Oreste Notelli <oreste.notelli@plecno.com>  Sun, 31 May 2009 19:48:00 +0100
 
