--- a/justniffer.8
+++ b/justniffer.8
@@ -263,6 +263,10 @@ is replaced by the result of the specified regular expression applied on the who
 is replaced by the request header (it is multiline)
 .TP
 .B
+%request.header.authorization
+is replaced by the request Authorization header value
+.TP
+.B
 %request.header.host
 is replaced by the request Host header  value
 .TP
@@ -291,8 +295,28 @@ is replaced by the request Accept-Encoding header  value
 is replaced by the request Connection header  value
 .TP
 .B
+%request.header.content-encoding
+is replaced by the request Content-Encoding header  value
+.TP
+.B
+%request.header.content-language
+is replaced by the request Content-Language header  value
+.TP
+.B
+%request.header.content-length
+is replaced by the request Content-Length header  value
+.TP
+.B
+%request.header.content-md5
+is replaced by the request Content-MD5 header  value
+.TP
+.B
 %request.header.cookie
 is replaced by the request Cookie header  value
+.TP
+.B
+%request.header.range
+is replaced by the request Range header  value
 .TP
 .B
 %request.header.referer
@@ -301,6 +325,10 @@ is replaced by the request Referer header  value
 .B
 %request.header.keep-alive
 is replaced by the request Keep-Alive header  value
+.TP
+.B
+%request.header.via
+is replaced by the request Via header  value
 .TP
 .B
 %request.header.value(<header-name>
@@ -359,6 +387,14 @@ is replaced by the result of the specified regular expression applied on the who
 is replaced by the response header (it is multiline)
 .TP
 .B
+%response.header.accept-ranges
+is replaced by the response Accept-Ranges header value
+.TP
+.B
+%response.header.allow
+is replaced by the response Allow header value
+.TP
+.B
 %response.header.server
 is replaced by the response Server header value
 .TP
@@ -367,8 +403,16 @@ is replaced by the response Server header value
 is replaced by the response Date header value 
 .TP
 .B
-%response.header.content_length
+%response.header.content-language
+is replaced by the respone Content-Language header value
+.TP
+.B
+%response.header.content-length
 is replaced by the respone Content-Lenght header value
+.TP
+.B
+%response.header.content-md5
+is replaced by the respone Content-MD5 header value
 .TP
 .B
 %response.header.content-type
@@ -428,15 +472,14 @@ is replaced by the response Via header value
 is replaced by the response Vary header value
 .TP
 .B
-%response.header.accept-ranges
-is replaced by the response Accept-Ranges header value
+%response.header.www-authenticate
+is replaced by the response WWW-Authenticate header value
 .TP
 .B
 %response.header.set-cookie
 is replaced by the response Set-Cookie header value
 .TP
 .B
-
 %response.header.value(<header-name>)
 is replaced by the response header value (e.g. "%request.header.value(Set-Cookie)")
 .TP
