git-svn-id: svn://svn.code.sf.net/p/justniffer/code/trunk@104 1140968e-e2c7-4c3d-a3be-3139d5afca7e

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
       * fixed idle.time.0 formatting
       * fixed documentation
       * more adherence to RFC 2616: looking for headers in case insesitive mode
+      * new HTTP headers added
 
 2009-05-27  Oreste Notelli
 
