git-svn-id: svn://svn.code.sf.net/p/justniffer/code/trunk@107 1140968e-e2c7-4c3d-a3be-3139d5afca7e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 2009-06-01  Oreste Notelli
+  * fixed default log format
+
+2009-06-01  Oreste Notelli
 
       * fixed compilation issues with gcc 3.3.3
       * added connection.timestamp
