--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,11 @@
+2009-06-29  Oreste Notelli
+      * improved performances keywords adding a "not applicable string" settable by optional parameter
+      * documentation updated for enhancement provided from version (0.5.3)
+
 2009-06-26  Oreste Notelli
-  * fixed request.header.* and response.header.* keywords bug
-  * fixed help options
-  * added connection.timestamp2 request.timestamp2 response.timestamp2 keywords
+      * fixed request.header.* and response.header.* keywords bug
+      * fixed help options
+      * added connection.timestamp2 request.timestamp2 response.timestamp2 keywords
 
 2009-06-25  Oreste Notelli
       * fixed %source.ip , %dest.ip , %source.port, %dest.port
