--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-07-03  Oreste Notelli
+      * forced flush on standard output whenever an new line is written 
+      * close_originator handler fixed
+      * lintian errors fixed
+
 2009-06-29  Oreste Notelli
       * improved performances keywords adding a "not applicable string" settable by optional parameter
       * documentation updated for enhancement provided from version (0.5.3)
