git-svn-id: svn://svn.code.sf.net/p/justniffer/code/trunk@133 1140968e-e2c7-4c3d-a3be-3139d5afca7e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-justniffer (0.5.6) unstable; urgency=low
+justniffer (0.5.6) jaunty; urgency=low
   * forced flush on standard output whenever an new line is written 
   * close_originator handler fixed
   * lintian errors fixed
