libnids fixed for gcc4.4
git-svn-id: svn://svn.code.sf.net/p/justniffer/code/trunk@141 1140968e-e2c7-4c3d-a3be-3139d5afca7e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2010-03-27  Oreste Notelli
+      * fixed libnids for gcc4.4
+
 2009-07-03  Oreste Notelli
       * forced flush on standard output whenever an new line is written 
       * close_originator handler fixed
